executable(meson.project_name(),
  sources: [
  'jose.c',
  'b64/dec.c',
  'b64/enc.c',
  'jwk/eql.c',
  'jwk/exc.c',
  'jwk/gen.c',
  'jwk/pub.c',
  'jwk/thp.c',
  'jwk/use.c',
  'jws/fmt.c',
  'jws/sig.c',
  'jws/ver.c',
  'jwe/fmt.c',
  'jwe/dec.c',
  'jwe/enc.c',
  'alg.c',
  'fmt.c'],
  include_directories: include_directories('../'),
  dependencies: jansson,
  link_with: libjose,
  install: true
)
